# vibe-usage

./: AppIcon.icns  CLAUDE.md  Cargo.toml  Info.plist  README.md  bundle.sh
src/: api.rs  history.rs  icons.rs  keychain.rs  main.rs  menubar.rs  settings.rs  ui.rs
