[package]
name = "vibe-usage"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.30"
tray-icon = "0.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
security-framework = "2"

[[bin]]
name = "vibe-usage"
path = "src/main.rs"
